pod-security/require-run-as-nonroot.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: require-run-as-nonroot
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot in ValidatingPolicy
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30+"
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root. This policy ensures
      `runAsNonRoot` is set to true.
spec:
  validationActions:
    - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
  variables:
    - name: ctnrs
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        (object.spec.?securityContext.?runAsNonRoot.orValue(false) == true
        && variables.ctnrs.all(c, c.?securityContext.?runAsNonRoot.orValue(true) == true))
        || variables.ctnrs.all(c, c.?securityContext.?runAsNonRoot.orValue(false) == true)
      message: >-
        Running as root is not allowed. Either spec.securityContext.runAsNonRoot 
        must be set to true, or all containers (spec.containers[*], spec.initContainers[*], 
        spec.ephemeralContainers[*]) must have securityContext.runAsNonRoot set to true.
