pod-security/restrict-volume-types.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-volume-types
  annotations:
    policies.kyverno.io/title: Restrict Volume Types in ValidatingPolicy
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod,Volume
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kubernetes-version: "1.30+"
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/description: >-
      In addition to restricting HostPath volumes, the restricted pod security profile
      limits usage of non-core volume types to those defined through PersistentVolumes.
      This policy blocks any other type of volume other than those in the allow list.
spec:
  validationActions:
    - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
  validations:
    - expression: >-
        !has(object.spec.volumes) ||
        object.spec.volumes.all(vol, has(vol.configMap) ||
        has(vol.csi) ||
        has(vol.downwardAPI) ||
        has(vol.emptyDir) ||
        has(vol.ephemeral) ||
        has(vol.persistentVolumeClaim) ||
        has(vol.projected) ||
        has(vol.secret))
      message: >-
        Only the following types of volumes may be used: configMap, csi, downwardAPI,
        emptyDir, ephemeral, persistentVolumeClaim, projected, and secret.
